test/files/neg/t6889.check
t6889.scala:16: error: type mismatch;
 found   : Test.Dingo
 required: AnyRef
Note that Dingo extends Any, not AnyRef.
Such types can participate in value classes, but instances
cannot appear in singleton types or in reference comparisons.
  def f(x: Dingo): AnyRef = x   // fail - no conversion to AnyRef
                            ^
t6889.scala:17: error: type mismatch;
 found   : Test.Dingo
 required: Object
Note that Dingo extends Any, not AnyRef.
Such types can participate in value classes, but instances
cannot appear in singleton types or in reference comparisons.
  def f2(x: Dingo): Object = x   // fail - no conversion to Object
                             ^
t6889.scala:18: error: an expression of type Null is ineligible for implicit conversion
  var x: Int = null             // fail - no conversion from Null
               ^
three errors found
